Configure plugin tests